assets/base: add rule for icons so not scaled down on iphones hopefully fixes #2684

--- a/meinberlin/assets/scss/_base.scss
+++ b/meinberlin/assets/scss/_base.scss
@@ -107,6 +107,11 @@ img {
     }
 }
 
+//stop iphone font scaling for icons
+i {
+    -webkit-text-size-adjust: 100%;
+}
+
 textarea,
 select[multiple] {
     resize: vertical;
